# gql-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: CI.yml
gql-inspect/src/: lib.rs
gql-introspector/: Cargo.toml  README.md  output.graphql
gql-introspector/examples/: gql_introspector.rs
gql-introspector/src/: error.rs
gqlclient/: Cargo.toml
gqlclient/examples/: gqlclient.rs
gqlclient/src/: gqlerror.rs  lib.rs
